# contract-analysis-flow

./: .gitignore  README.md  pyproject.toml
src/contract_analysis_flow_workshop/: main.py  pre_process_service.py
src/contract_analysis_flow_workshop/events/: eval_listener.py
